--- a/index.html
+++ b/index.html
@@ -313,9 +313,8 @@
     <section id="services-2" class="services-2 section dark-background">
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Services</h2>
-        <p>Necessitatibus eius consequatur</p>
-      </div><!-- End Section Title -->
+        <h2>Our Farm Pictures</h2>
+        </div><!-- End Section Title -->
 
       <div class="services-carousel-wrap">
         <div class="container">
