--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
     
 <div>
   <h2 class="fn">Find us here</h2>
-         <button class="BUTTON"> <p><a href="https://wa.me/254111782484" target="_blank" class="bttn">Get in touch</a></p>
+         <button class="BUTTON"> <p><a href="https://wa.me/254111782484?text=Hello%20I%20am%20interested%20in%20your%20farming%20services" target="_blank" class="bttn">Get in touch</a></p>
          </button>
         </div>
   </main>
