--- a/index.html
+++ b/index.html
@@ -227,13 +227,13 @@
               <div class="service-item">
                 <span class="number">07</span>
                 <div class="service-item-icon">
-                 <img src="assets/img/color.svg" width="120" height="100" style="color: currentColor;" alt="icon" />
+                 <img src="assets/img/color.svg" width="180" height="100" style="color: currentColor;" alt="icon" />
                 </div>
                 <div class="service-item-content">
-                  <h3 class="service-heading">Watering</h3>
+                  <h3 class="service-heading">Livestock Keeping</h3>
                   <p>
-                   We provide reliable water solutions to keep your crops hydrated,
-                    using sustainable mathods that conserve water.
+                   We Raise healthy cattle, goats, sheep and poultry with care
+                    providing quality and sustainable products.
                   </p>
                 </div>
               </div>
