--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
             <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <h3 class="content-subtitle text-white opacity-50">Why Choose Us</h3>
               <h2 class="content-title mb-4">
-                More than <strong>15 year experience</strong> in agriculture
+                More than <strong>15 years of experience</strong> in agriculture
                 industry
               </h2>
                <div class="row my-5">
