--- a/index.html
+++ b/index.html
@@ -77,6 +77,24 @@
             <h2>Providing Fresh Produce Every Single Day</h2>
          </div>
         </div><!-- End Carousel Item -->
+        <div class="carousel-item">
+          <img src="assets/img/hero_4.jpg" alt="">
+          <div class="carousel-container">
+            <h2>Livestock keeping supports sustainable living</h2>
+         </div>
+        </div><!-- End Carousel Item -->
+        <div class="carousel-item">
+          <img src="assets/img/hero_5.jpg" alt="">
+          <div class="carousel-container">
+            <h2>Nutritious livestock products fuel helthier lives.</h2>
+         </div>
+        </div><!-- End Carousel Item -->
+        <div class="carousel-item">
+          <img src="assets/img/hero_6.jpg" alt="">
+          <div class="carousel-container">
+            <h2>Strengthens communities through shared growth</h2>
+         </div>
+        </div><!-- End Carousel Item -->
         <a class="carousel-control-prev" href="#hero-carousel" role="button" data-bs-slide="prev">
           <span class="carousel-control-prev-icon bi bi-chevron-left" aria-hidden="true"></span>
         </a>
@@ -379,6 +397,39 @@
                     </a>
                   </div>
                   <img src="assets/img/img_sq_4.jpg" alt="Image" class="img-fluid">
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="service-item">
+                  <div class="service-item-contents">
+                    <a href="#">
+                      <span class="service-item-category">We do</span>
+                      <h2 class="service-item-title">Grooming</h2>
+                    </a>
+                  </div>
+                  <img src="assets/img/hero_6.jpg" alt="Image" class="img-fluid">
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="service-item">
+                  <div class="service-item-contents">
+                    <a href="#">
+                      <span class="service-item-category">We do</span>
+                      <h2 class="service-item-title">Vaccination</h2>
+                    </a>
+                  </div>
+                  <img src="assets/img/hero_5.jpg" alt="Image" class="img-fluid">
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="service-item">
+                  <div class="service-item-contents">
+                    <a href="#">
+                      <span class="service-item-category">We do</span>
+                      <h2 class="service-item-title">Weaning</h2>
+                    </a>
+                  </div>
+                  <img src="assets/img/hero_4.jpg" alt="Image" class="img-fluid">
                 </div>
               </div>
               </div>
